# MITM-block-using-ECDH-Authentication-CA-

./: CMakeLists.txt  README.md  gitignore  gitkeep
data/: ca_key.hex  ca_pub.hex
scripts/: demo.sh  tmux_demo.sh
src/: alice.cpp  bob.cpp  oscar.cpp
src/crypto/: aes_gcm.cpp  aes_gcm.h  cert_auth.cpp  cert_auth.h  ecc_math.cpp  ecc_math.h  ecdh_core.cpp  ecdh_core.h
src/protocol/: handshake.cpp  handshake.h  messenger.cpp  messenger.h  tcp_channel.cpp  tcp_channel.h
src/ui/: terminal.cpp  terminal.h
